--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,7 +167,7 @@
 
     <string name="settings_title">Settings</string>
 
-    <string name="settings_keys_title">Keys</string>
+    <string name="settings_keys_title">Account</string>
     <string name="settings_keys_copy_public_key">Copy public key</string>
     <string name="settings_keys_public_key_hint">Anyone on Nostr can find you via your public key. Feel free to share anywhere.</string>
     <string name="settings_keys_public_key_title">Your Public Key</string>
@@ -211,6 +211,7 @@
 
     <string name="settings_appearance_title">Appearance</string>
     <string name="settings_appearance_theme_section_title">Theme</string>
+
     <string name="settings_network_title">Network</string>
 
     <string name="settings_feeds_title">Feeds</string>
