--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,6 +230,7 @@
 
     <string name="settings_muted_accounts_title">Muted Accounts</string>
     <string name="settings_muted_accounts_unmute_button">Unmute</string>
+    <string name="settings_muted_accounts_no_content">Your muted accounts will appear here.</string>
 
     <string name="settings_version_title">Version</string>
 
@@ -250,10 +251,8 @@
     <string name="profile_user_feed_title">%1$s\'s feed</string>
     <string name="profile_user_is_muted">%1$s is muted.</string>
 
-
     <string name="context_menu_mute_user">Mute user</string>
     <string name="context_menu_unmute_user">Unmute user</string>
-
 
     <string name="zap_bottom_sheet_comment_placeholder">Add a comment…</string>
     <string name="zap_bottom_sheet_zap_button">Zap</string>
