Implements sending direct message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,6 +199,7 @@
     <string name="messages_chat_initial_loading_error">Unable to load messages. Please try again.</string>
 
     <string name="chat_message_hint">Message %1$s</string>
+    <string name="chat_nostr_publish_error">Unable to send your message. Please try again soon.</string>
 
     <string name="new_message_title">New message</string>
     <string name="new_message_search_hint">Search users</string>
