Implement new UI in RepostOrQuoteBottomSheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,8 +130,8 @@
     <string name="feed_context_mute_user">Mute user</string>
     <string name="feed_context_copied_toast">Copied!</string>
 
-    <string name="post_repost_button_confirmation">Repost</string>
-    <string name="post_quote_button_confirmation">Quote</string>
+    <string name="post_repost_button_confirmation">Repost Note</string>
+    <string name="post_quote_button_confirmation">Quote Note</string>
 
     <string name="note_editor_post_publish_button">Post</string>
     <string name="note_editor_reply_publish_button">Reply</string>
