--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -371,6 +371,10 @@
     <string name="wallet_create_transaction_done_button">Done</string>
     <string name="wallet_create_transaction_close_button">Close</string>
 
+    <string name="wallet_receive_transaction_title">Receive</string>
+    <string name="wallet_receive_transaction_receiving_to">Receiving to:</string>
+    <string name="wallet_receive_transaction_copy_button">Copy</string>
+
     <string name="qrcode_scanner_permission_title">Permission required</string>
     <string name="qrcode_scanner_permission_rationale">Primal needs access to your camera to scan QR codes.</string>
     <string name="qrcode_scanner_grant_permission_button">Allow access</string>
