Implement parsing deposit response

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -377,6 +377,7 @@
     <string name="wallet_receive_transaction_comment">Comment:</string>
     <string name="wallet_receive_transaction_copy_button">Copy</string>
     <string name="wallet_receive_transaction_add_details_button">Add Details</string>
+    <string name="wallet_receive_transaction_edit_details_button">Edit Details</string>
     <string name="wallet_receive_transaction_comment_hint">Add a comment</string>
     <string name="wallet_receive_transaction_cancel_numeric_pad_button">Cancel</string>
     <string name="wallet_receive_transaction_apply_numeric_pad_button">Apply</string>
