--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -391,6 +391,8 @@
     <string name="wallet_receive_transaction_apply_numeric_pad_button">Apply</string>
     <string name="wallet_receive_transaction_invoice_creation_error">Unable to add details. Please try again in few moments.</string>
 
+    <string name="wallet_transaction_details_something">Something</string>
+
     <string name="qrcode_scanner_permission_title">Permission required</string>
     <string name="qrcode_scanner_permission_rationale">Primal needs access to your camera to scan QR codes.</string>
     <string name="qrcode_scanner_grant_permission_button">Allow access</string>
