--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,13 +225,17 @@
 
     <string name="settings_wallet_title">Wallet</string>
     <string name="settings_wallet_connected_title">Wallet Connected</string>
-    <string name="settings_wallet_connected_subtitle">You are currently using the following bitcoin lightning wallet:</string>
-    <string name="settings_wallet_not_connected_title">Connect a Wallet</string>
-    <string name="settings_wallet_not_connected_subtitle">To send and receive zaps, connect a bitcoin lightning wallet.</string>
-    <string name="settings_wallet_disconnect_action">Disconnect wallet</string>
-    <string name="settings_wallet_connect_alby_wallet">Connect Alby Wallet</string>
-    <string name="settings_wallet_connect_mutiny_wallet">Connect Mutiny Wallet</string>
-    <string name="settings_wallet_nwc_activation">Activate Nostr Wallet Connect (NWC)</string>
+    <string name="settings_wallet_use_external_wallet">Use external wallet</string>
+    <string name="settings_wallet_use_external_wallet_hint">Alternatively you can connect to an external lightning wallet via Nostr Wallet Connect</string>
+    <string name="settings_wallet_nwc_header_not_connected">Connect a Wallet</string>
+    <string name="settings_wallet_nwc_header_connected">Wallet Connected</string>
+    <string name="settings_wallet_nwc_connect_alby_wallet">Connect Alby Wallet</string>
+    <string name="settings_wallet_nwc_connect_mutiny_wallet">Connect Mutiny Wallet</string>
+    <string name="settings_wallet_nwc_connect_other_wallet">Connect Other Wallet</string>
+    <string name="settings_wallet_nwc_disconnect_wallet_button">Disconnect Wallet</string>
+    <string name="settings_wallet_nwc_profile_lightning_address">Your Nostr Lightning Address:</string>
+    <string name="settings_wallet_nwc_profile_lightning_address_hint">You can change your Nostr Lightning Address (for receiving zaps) in your</string>
+    <string name="settings_wallet_nwc_profile_lightning_address_hint_suffix">profile settings</string>
 
     <string name="settings_notifications_title">Notifications</string>
     <string name="settings_notifications_error_update_settings">Unable to update notification settings.</string>
