--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="nsec">nsec</string>
     <string name="npub">npub</string>
 
+    <string name="app_info">Info</string>
     <string name="app_generic_error">Something went wrong. Please try again.</string>
     <string name="app_missing_relays_config">No relays found. Please configure your Network.</string>
     <string name="app_error_loading_prev_page">Unable to load newer content. Please try again.</string>
@@ -225,8 +226,8 @@
 
     <string name="settings_wallet_title">Wallet</string>
     <string name="settings_wallet_connected_title">Wallet Connected</string>
-    <string name="settings_wallet_use_external_wallet">Use external wallet</string>
-    <string name="settings_wallet_use_external_wallet_hint">Alternatively you can connect to an external lightning wallet via Nostr Wallet Connect</string>
+    <string name="settings_wallet_use_primal_wallet">Use Primal wallet</string>
+    <string name="settings_wallet_use_primal_wallet_hint">Alternatively you can connect to an external lightning wallet via Nostr Wallet Connect</string>
     <string name="settings_wallet_nwc_header_not_connected">Connect a Wallet</string>
     <string name="settings_wallet_nwc_header_connected">Wallet Connected</string>
     <string name="settings_wallet_nwc_connect_alby_wallet">Connect Alby Wallet</string>
@@ -236,6 +237,14 @@
     <string name="settings_wallet_nwc_profile_lightning_address">Your Nostr Lightning Address:</string>
     <string name="settings_wallet_nwc_profile_lightning_address_hint">You can change your Nostr Lightning Address (for receiving zaps) in your</string>
     <string name="settings_wallet_nwc_profile_lightning_address_hint_suffix">profile settings</string>
+    <string name="settings_wallet_max_wallet_balance">Max wallet balance</string>
+    <string name="settings_wallet_max_wallet_balance_hint">Primal Wallet is a transactional wallet, designed for handling small amounts. We recommend self custody for larger amounts.</string>
+    <string name="settings_wallet_hide_transactions_below">Hide transactions below</string>
+    <string name="settings_wallet_hide_transactions_below_hint">You can choose to hide small transactions to avoid spam in your transaction list</string>
+    <string name="settings_wallet_hide_transactions_below_edit_title">Edit amount</string>
+    <string name="settings_wallet_start_in_wallet">Start in wallet</string>
+    <string name="settings_wallet_start_in_wallet_hint">Open the wallet when Primal starts</string>
+    <string name="settings_wallet_save">Save</string>
 
     <string name="settings_notifications_title">Notifications</string>
     <string name="settings_notifications_error_update_settings">Unable to update notification settings.</string>
