Improve trending hashtags updates; Add empty and loading states to trending hashtags screen;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,6 +160,7 @@
 
     <string name="explore_search_nostr">Search Nostr</string>
     <string name="explore_enter_query">Enter text to search</string>
+    <string name="explore_trending_hashtags_no_content">Trending hashtags will appear here.</string>
 
     <string name="search_followers_text">Followers</string>
 
