--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -316,6 +316,11 @@
     <string name="profile_user_feed_title">%1$s\'s feed</string>
     <string name="profile_user_is_muted">%1$s is muted.</string>
 
+    <string name="profile_followers_title">%1$s\'s followers</string>
+    <string name="profile_following_title">%1$s\'s following</string>
+    <string name="profile_followers_no_content">Your profile followers will appear here.</string>
+    <string name="profile_following_no_content">Your profile following will appear here.</string>
+
     <string name="context_menu_mute_user">Mute user</string>
     <string name="context_menu_unmute_user">Unmute user</string>
 
